chore: remove trainRuns for now
