# src/server/API/controller/CoachSequence/v4.ts
@@ -10,16 +10,10 @@ import {
   Tags,
 } from '@tsoa/runtime';
 import { getPlannedSequence } from '@/server/coachSequence/DB/plannedSequence';
-import { getTrainRunsByDate } from '@/server/coachSequence/DB/trainRuns';
 import { isAllowed } from '@/server/API/controller/journeys/v1';
-import type {
-  AvailableBR,
-  AvailableIdentifier,
-  CoachSequenceInformation,
-} from '@/types/coachSequence';
+import type { CoachSequenceInformation } from '@/types/coachSequence';
 import type { EvaNumber } from '@/types/common';
 import type { Request as KoaRequest } from 'koa';
-import type { TrainRunWithBR } from '@/types/trainRuns';
 import type { TsoaResponse } from '@tsoa/runtime';
 
 @Route('/coachSequence/v4')
@@ -93,32 +87,32 @@ export class CoachSequenceControllerV4 extends Controller {
    * Returns all journeys that run on a specific date. Only works for DB Fernverkehr
    * @example stopsAt "[8000105, 8000191]"
    */
-  @Get('/runsPerDate/{date}')
-  @Tags('CoachSequence')
-  @OperationId('Runs per Date v4')
-  async runsPerDate(
-    @Request() req: KoaRequest,
-    @Res() response: TsoaResponse<401, void | string>,
-    date: Date,
-    /**
-     * Used to filter for specific Baureihen
-     */
-    @Query() baureihen?: AvailableBR[],
-    /**
-     * Used to filter for specific identifier (identifier are defined by me, not DB)
-     */
-    @Query() identifier?: AvailableIdentifier[],
-    /**
-     * Used to filter for runs that stop at specific stopPlaces in the specifed order
-     */
-    @Query() stopsAt?: EvaNumber[],
-  ): Promise<TrainRunWithBR[]> {
-    if (!isAllowed(req)) {
-      return response(
-        401,
-        'This is heavily rate-limited upstream, please do not use it.',
-      );
-    }
-    return getTrainRunsByDate(date, baureihen, identifier, stopsAt);
-  }
+  // @Get('/runsPerDate/{date}')
+  // @Tags('CoachSequence')
+  // @OperationId('Runs per Date v4')
+  // async runsPerDate(
+  //   @Request() req: KoaRequest,
+  //   @Res() response: TsoaResponse<401, void | string>,
+  //   date: Date,
+  //   /**
+  //    * Used to filter for specific Baureihen
+  //    */
+  //   @Query() baureihen?: AvailableBR[],
+  //   /**
+  //    * Used to filter for specific identifier (identifier are defined by me, not DB)
+  //    */
+  //   @Query() identifier?: AvailableIdentifier[],
+  //   /**
+  //    * Used to filter for runs that stop at specific stopPlaces in the specifed order
+  //    */
+  //   @Query() stopsAt?: EvaNumber[],
+  // ): Promise<TrainRunWithBR[]> {
+  //   if (!isAllowed(req)) {
+  //     return response(
+  //       401,
+  //       'This is heavily rate-limited upstream, please do not use it.',
+  //     );
+  //   }
+  //   return getTrainRunsByDate(date, baureihen, identifier, stopsAt);
+  // }
 }
